[gd_scene load_steps=23 format=2]

[ext_resource path="res://pieces/hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=2]
[ext_resource path="res://fsm/states/patrol.gd" type="Script" id=3]
[ext_resource path="res://fsm/states/stunned.gd" type="Script" id=4]
[ext_resource path="res://entities/enemies/blademaster.gd" type="Script" id=5]
[ext_resource path="res://fsm/states/charge.gd" type="Script" id=6]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=7]
[ext_resource path="res://pieces/walledge_detector.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/enemies/blademaster.png" type="Texture" id=9]
[ext_resource path="res://entities/enemies/blademaster_fumble.gd" type="Script" id=10]
[ext_resource path="res://fsm/states/state.gd" type="Script" id=11]
[ext_resource path="res://entities/enemies/data/blademaster.tres" type="Resource" id=12]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attacc"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fumble"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=4]
resource_name = "postattacc"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fall"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "recover"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=10]
resource_name = "unattacc"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 9, 8, 7, 6, 5, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="blademaster" type="KinematicBody2D"]
script = ExtResource( 5 )
flip_path = NodePath("flippable")
enemy_data = ExtResource( 12 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="flippable" type="Node2D" parent="."]
use_parent_material = true

[node name="hurtbox" parent="flippable" instance=ExtResource( 1 )]
knockback = Vector2( 100, -45 )

[node name="hitbox" type="CollisionPolygon2D" parent="flippable/hurtbox"]
polygon = PoolVector2Array( -12, -24, 0, -28, 12, -24, 20, -16, 28, 0, 12, 0, 8, -4, 4, -8, -4, -8 )

[node name="walledge_detector" parent="flippable" instance=ExtResource( 8 )]
position = Vector2( 12, 8 )

[node name="entity_detector" parent="flippable" instance=ExtResource( 7 )]
position = Vector2( 16, 0 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/entity_detector"]
shape = SubResource( 8 )

[node name="sprite" type="Sprite" parent="flippable"]
use_parent_material = true
position = Vector2( 0, -16 )
texture = ExtResource( 9 )
hframes = 8
vframes = 4

[node name="animator" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/attacc = SubResource( 2 )
anims/fumble = SubResource( 3 )
anims/idle = SubResource( 7 )
anims/postattacc = SubResource( 4 )
anims/recover = SubResource( 9 )
anims/unattacc = SubResource( 10 )
anims/walk = SubResource( 5 )

[node name="fsm" type="Node" parent="."]
script = ExtResource( 2 )
animator_path = NodePath("../animator")

[node name="patrol" type="Node" parent="fsm"]
script = ExtResource( 3 )
run_animation = "walk"

[node name="attacc" type="Node" parent="fsm"]
script = ExtResource( 6 )
animation = "attacc"
auto_proceed = "fumble"
recover_animation = "postattacc"

[node name="unattacc" type="Node" parent="fsm"]
script = ExtResource( 11 )
animation = "unattacc"
auto_proceed = "patrol"

[node name="fumble" type="Node" parent="fsm"]
script = ExtResource( 10 )
animation = "fumble"

[node name="recover" type="Node" parent="fsm"]
script = ExtResource( 4 )
animation = "recover"
auto_proceed = "patrol"
duration = 0.8

[connection signal="updated" from="flippable/walledge_detector" to="fsm/patrol" method="_on_walledge_detector_updated"]
[connection signal="activated" from="flippable/entity_detector" to="." method="_on_entity_detector_activated"]
[connection signal="state_changed" from="fsm" to="." method="_on_state_changed"]
[connection signal="activated" from="fsm/attacc" to="." method="_on_attacc_activated"]
